; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/rpcrt4/extr_rpc_message.c_RPCRT4_default_impersonate_client.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/rpcrt4/extr_rpc_message.c_RPCRT4_default_impersonate_client.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }

@.str = private unnamed_addr constant [6 x i8] c"(%p)\0A\00", align 1
@RPC_S_NO_CONTEXT_AVAILABLE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [44 x i8] c"ImpersonateSecurityContext returned 0x%08x\0A\00", align 1
@RPC_S_CANNOT_SUPPORT = common dso_local global i32 0, align 4
@RPC_S_OK = common dso_local global i32 0, align 4
@RPC_S_SEC_PKG_ERROR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @RPCRT4_default_impersonate_client(%struct.TYPE_4__* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.TYPE_4__*, align 8
  %4 = alloca i32, align 4
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %3, align 8
  %5 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %6 = call i32 @TRACE(i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), %struct.TYPE_4__* %5)
  %7 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %8 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %1
  %12 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %12, i32 0, i32 0
  %14 = call i32 @SecIsValidHandle(i32* %13)
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %18, label %16

16:                                               ; preds = %11, %1
  %17 = load i32, i32* @RPC_S_NO_CONTEXT_AVAILABLE, align 4
  store i32 %17, i32* %2, align 4
  br label %37

18:                                               ; preds = %11
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %3, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  %21 = call i32 @ImpersonateSecurityContext(i32* %20)
  store i32 %21, i32* %4, align 4
  %22 = load i32, i32* %4, align 4
  %23 = icmp ne i32 %22, 129
  br i1 %23, label %24, label %27

24:                                               ; preds = %18
  %25 = load i32, i32* %4, align 4
  %26 = call i32 @WARN(i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str.1, i64 0, i64 0), i32 %25)
  br label %27

27:                                               ; preds = %24, %18
  %28 = load i32, i32* %4, align 4
  switch i32 %28, label %35 [
    i32 128, label %29
    i32 130, label %31
    i32 129, label %33
  ]

29:                                               ; preds = %27
  %30 = load i32, i32* @RPC_S_CANNOT_SUPPORT, align 4
  store i32 %30, i32* %2, align 4
  br label %37

31:                                               ; preds = %27
  %32 = load i32, i32* @RPC_S_NO_CONTEXT_AVAILABLE, align 4
  store i32 %32, i32* %2, align 4
  br label %37

33:                                               ; preds = %27
  %34 = load i32, i32* @RPC_S_OK, align 4
  store i32 %34, i32* %2, align 4
  br label %37

35:                                               ; preds = %27
  %36 = load i32, i32* @RPC_S_SEC_PKG_ERROR, align 4
  store i32 %36, i32* %2, align 4
  br label %37

37:                                               ; preds = %35, %33, %31, %29, %16
  %38 = load i32, i32* %2, align 4
  ret i32 %38
}

declare dso_local i32 @TRACE(i8*, %struct.TYPE_4__*) #1

declare dso_local i32 @SecIsValidHandle(i32*) #1

declare dso_local i32 @ImpersonateSecurityContext(i32*) #1

declare dso_local i32 @WARN(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
